--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_library(
-    test_video_compressor test.cpp)
+add_executable(
+    test_video_compressor test.cpp pipeline.cpp)
 
-target_include_directories(test_video_compressor PUBLIC)
+target_include_directories(
+    test_video_compressor PUBLIC tests)
+
+target_link_libraries(
+    test_video_compressor PRIVATE video_compressor_lib)
+
